Add support for Gemini and Grok; available on CRAN after August 22

--- a/README.Rmd
+++ b/README.Rmd
@@ -27,7 +27,7 @@ knitr::opts_chunk$set(
 
 ## Overview
 
-**chatLLM** is an R package providing a single, consistent interface to multiple “OpenAI‑compatible” chat APIs (OpenAI, Groq, Anthropic, DeepSeek, Alibaba DashScope, and GitHub Models).
+**chatLLM** is an R package providing a single, consistent interface to multiple “OpenAI‑compatible” chat APIs (OpenAI, Groq, Anthropic, DeepSeek, Alibaba DashScope, Gemini, Grok and GitHub Models).
 
 Key features:
 
@@ -69,7 +69,9 @@ Sys.setenv(
   ANTHROPIC_API_KEY  = "your-anthropic-key",
   DEEPSEEK_API_KEY   = "your-deepseek-key",
   DASHSCOPE_API_KEY  = "your-dashscope-key",
-  GH_MODELS_TOKEN    = "your-github-models-token"
+  GH_MODELS_TOKEN    = "your-github-models-token",
+  GEMINI_API_KEY     = "your-gemini-key",
+  XAI_API_KEY        = "your-grok-key"
 )
 ```
 
